Acomodo algunas cosas y completo todos los puntos que faltaban

--- a/cientificos.tex
+++ b/cientificos.tex
@@ -1,4 +1,7 @@
 \begin{enumerate}[leftmargin=0.8cm]
+  \item[a)]{Trabajos publicados
+    \\ No corresponde
+  }
 
   \item[b)]{Participación en congresos o acontecimientos nacionales o internacionales
 
@@ -12,6 +15,22 @@
       {Asistencia al panel de \textbf{Combustibles Fósiles}.}
 
     \end{itemize}
+  }
+
+  \item[c)]{Formación de Recursos Humanos.
+    \\ No corresponde
+  }
+
+  \item[d)]{Participación en Proyectos de Investigación
+    \\ No corresponde
+  }
+
+  \item[e)]{Cursos de Posgrado no incluidos en la carrera de Doctorado.
+    \\ No corresponde
+  }
+
+  \item[f)]{Otros antecedentes científicos no considerados en los puntos anteriores
+    \\ No corresponde
   }
 
 \end{enumerate}
