--- a/docentes.tex
+++ b/docentes.tex
@@ -5,21 +5,25 @@
     \begin{itemize}[leftmargin=0.2cm]
 
       % Orga I 2019 2C
-      \WorkEntry{\textbf{Ayudante de Segunda} en la materia \textbf{Organización del Computador I}}
+      \WorkEntry{\textbf{Ayudante de Segunda} (regular) en la materia \textbf{Organización del Computador I}}
       {FCEyN - UBA}
       {Durante el segundo cuatrimestre de 2019.}{}
 
       % Orga II 2016 1C
-      \WorkEntry{\textbf{Ayudante de Segunda} en la materia \textbf{Organización del Computador II}}
+      \WorkEntry{\textbf{Ayudante de Segunda} (regular) en la materia \textbf{Organización del Computador II}}
       {FCEyN - UBA}
       {Durante el primer cuatrimestre de 2016.}{}
 
       % SO 2015
-      \WorkEntry{\textbf{Ayudante de Segunda} en la materia \textbf{Sistemas Operativos}}
+      \WorkEntry{\textbf{Ayudante de Segunda} (interino) en la materia \textbf{Sistemas Operativos}}
       {FCEyN - UBA}
       {Durante 2015.}{}
 
     \end{itemize}
+  }
+
+  \item[b)]{En otros niveles educativos
+    \\ No corresponde
   }
 
   \item[c)]{Formación pedagogica
