--- a/extension.tex
+++ b/extension.tex
@@ -7,7 +7,7 @@
 
 \begin{enumerate}[leftmargin=0.8cm]
 
-  \item[a)]{Proyectos de extensión
+  \item[a)]{Proyectos de Extensión actuales y anteriores
 
     \begin{itemize}[leftmargin=0.2cm]
 
@@ -120,6 +120,18 @@
       }
 
     \end{itemize}
+  }
+
+  \item[c)]{Publicaciones
+    \\ No corresponde
+  }
+
+  \item[d)]{Presentaciones de proyectos de extensión en congresos, jornadas y otros encuentros de la especialidad.
+    \\ No corresponde
+  }
+
+  \item[e)]{Otras actividades de extensión no contempladas en los puntos anteriores.
+    \\ No corresponde
   }
 
 \end{enumerate}
