--- a/otros.tex
+++ b/otros.tex
@@ -15,7 +15,19 @@
 
   }
 
-  \item[d)]{Otros elementos de juicio que considere valiosos
+  \item[b)]{Carrera de Doctorado.
+    \\ No corresponde
+  }
+
+  \item[c)]{Becas y distinciones
+    \\ No corresponde
+  }
+
+  \item[d)]{Tareas de gestión universitaria.
+    \\ No corresponde
+  }
+
+  \item[e)]{Otros elementos de juicio que considere valiosos.
 
     \begin{itemize}[leftmargin=0.2cm]
 
