--- a/profesionales.tex
+++ b/profesionales.tex
@@ -1,6 +1,6 @@
 \begin{enumerate}[leftmargin=0.8cm]
 
-  \item[a)]{Actividades profesionales fuera del ámbito académico
+  \item[a)]{Actividades profesionales fuera del ámbito académico.
 
     \begin{itemize}[leftmargin=0.2cm]
 
@@ -18,6 +18,15 @@
 
     \end{itemize}
 
+  }
+
+  \item[b)]{Actividades de desarrollo tecnológico realizadas fuera del ámbito académico o como parte de proyectos de
+transferencia entre el sector Científico y el Productivo
+    \\ No corresponde
+  }
+
+  \item[c)]{Otros antecedentes vinculados a la actividad profesional (no académica).
+    \\ No corresponde
   }
 
 \end{enumerate}
