--- a/datos_del_aspirante.tex
+++ b/datos_del_aspirante.tex
@@ -7,7 +7,7 @@
 \newcommand{\numeroDiaNacimientoDelAspirante}{12}
 \newcommand{\numeroMesNacimientoDelAspirante}{05}
 \newcommand{\anioNacimientoDelAspirante}{1955}
-\newcommand{\telefonoDelDomicilioDelAspirante}{0800-222-FCEN}
+\newcommand{\telefonoDelAspirante}{0800-222-FCEN}
 \newcommand{\emailDelAspirante}{hsimpson@plantanuclear.com}
 
 % Opcional: Email alternativo. Si no tenés ninguno, dejalo en blanco.
