--- a/concursos.tex
+++ b/concursos.tex
@@ -108,7 +108,7 @@
   \end{center}
 }
 
-\newcommand{\fechaNacimiento}{\noindent \dato{\numeroDiaNacimientoDelAspirante /\hspace{0.1cm} \numeroMesNacimientoDelAspirante /\hspace{0.1cm} \anioNacimientoDelAspirante}}
+\newcommand{\fechaNacimiento}{\noindent \dato{\numeroDiaNacimientoDelAspirante /\numeroMesNacimientoDelAspirante /\anioNacimientoDelAspirante}}
 \newcommand{\fecha}[3]{\MakeUppercase{\textbf{#1 de #2 de #3}}}
 \newcommand{\enlace}[2]{\href{#1}{\textcolor{blue}{\underline{#2}}}}
 
@@ -162,7 +162,7 @@
   \\ \\
 \end{tabular}
 
-\campo{Teléfono celular* {\scriptsize(área número sin 0 sin 15)}:} \dato{\telefonoDelDomicilioDelAspirante}
+\campo{Teléfono celular* {\scriptsize(área número sin 0 sin 15)}:} \dato{\telefonoDelAspirante}
 
 \seccion{Consideración De Antecedentes}
 
