--- a/docentes.tex
+++ b/docentes.tex
@@ -26,7 +26,7 @@
     \\ No corresponde
   }
 
-  \item[c)]{Formación pedagogica
+  \item[c)]{Formación pedagógica
 
     \begin{itemize}[leftmargin=0.2cm]
 
