Actualizo a la versión 2

--- a/concursos.tex
+++ b/concursos.tex
@@ -52,7 +52,7 @@
       &\multicolumn{3}{|c|}{\titulosec{Solicitud de Inscripción a Concurso regular}}\\
       &\multicolumn{3}{|c|}{\titulosec{o a Selección interina de docentes auxiliares}}\\
       \cline{2-4}
-      &\centering Código: FORM-CONC-001&\centering Versión: 1&Fecha: 08-02-2023
+      &\centering Código: FORM-CONC-001-B&\centering Versión: 2&Fecha: 26-06-2023
       \\
       \hline
   \end{tabular}
@@ -121,7 +121,7 @@
 
 \begin{document}
 
-\recuadro{Los campos marcados con * son de llenado obligatorio}
+% \recuadro{Los campos marcados con * son de llenado obligatorio}
 % \begin{center}
 % \begin{tabular}{|m{0.9\textwidth}|}
 %     \hline
@@ -133,62 +133,62 @@
 % \end{tabular}
 % \end{center}
 
-\seccion{Datos del Concurso}
+% \seccion{Datos del Concurso}
 
-\medskip
+% \medskip
 
-\campo{Departamento*:} \dato{Computación}
+% \campo{Departamento*:} \dato{Computación}
 
-\medskip
+% \medskip
 
-\campo{Área a concursar*:} \dato{\area}
+% \campo{Área a concursar*:} \dato{\area}
 
-\medskip
+% \medskip
 
-\cargo
+% \cargo
 
-\medskip
+% \medskip
 
-\seccion{Datos Personales}
+% \seccion{Datos Personales}
 
-\noindent \begin{tabular}{@{}lcl}
-  \campo{Apellido/s*:} \dato{\apellidoDelAspirante} & & \campo{Nombre/s*:} \dato{\nombresDelAspirante}
-  \\ \\
-  \campo{Documento tipo*:} \radioOn\ DNI \radioOff\ Pasaporte \radioOff\ LC & & \campo{Número*:} \dato{\numeroDocumentoDeIdentidadDelAspirante}
-  \\ \\
-  \campo{Fecha de nacimiento* {\scriptsize(DD/MM/AAAA)}:} \fechaNacimiento & & \campo{Legajo UBA:} \dato{\numeroDeLegajoDelAspirante}
-  \\ \\
-  \campo{Email*:} \dato{\emailDelAspirante} & & \campo{Email alternativo:} \dato{\emailAlternativoDelAspirante}
-  \\ \\
-\end{tabular}
+% \noindent \begin{tabular}{@{}lcl}
+%   \campo{Apellido/s*:} \dato{\apellidoDelAspirante} & & \campo{Nombre/s*:} \dato{\nombresDelAspirante}
+%   \\ \\
+%   \campo{Documento tipo*:} \radioOn\ DNI \radioOff\ Pasaporte \radioOff\ LC & & \campo{Número*:} \dato{\numeroDocumentoDeIdentidadDelAspirante}
+%   \\ \\
+%   \campo{Fecha de nacimiento* {\scriptsize(DD/MM/AAAA)}:} \fechaNacimiento & & \campo{Legajo UBA:} \dato{\numeroDeLegajoDelAspirante}
+%   \\ \\
+%   \campo{Email*:} \dato{\emailDelAspirante} & & \campo{Email alternativo:} \dato{\emailAlternativoDelAspirante}
+%   \\ \\
+% \end{tabular}
 
-\campo{Teléfono celular* {\scriptsize(área número sin 0 sin 15)}:} \dato{\telefonoDelAspirante}
+% \campo{Teléfono celular* {\scriptsize(área número sin 0 sin 15)}:} \dato{\telefonoDelAspirante}
 
-\seccion{Consideración De Antecedentes}
+% \seccion{Consideración De Antecedentes}
 
-\noindent \ifdefined\considerameLaPandemia \checkOff \else \checkOn \fi\ Deseo que NO se consideren los antecedentes comprendidos en el período de marzo 2020 - marzo 2022.
+% \noindent \ifdefined\considerameLaPandemia \checkOff \else \checkOn \fi\ Deseo que NO se consideren los antecedentes comprendidos en el período de marzo 2020 - marzo 2022.
 
-\noindent \textit{Nota: si no marca el casillero, SÍ se considerarán sus antecedentes en el período indicado.}
+% \noindent \textit{Nota: si no marca el casillero, SÍ se considerarán sus antecedentes en el período indicado.}
 
-\noindent \enlace{https://exactas.uba.ar/wp-content/uploads/2022/04/CD-22-0411-MODIFICACION-REGLAMENTO.pdf}{Res. CD 411/22} sobre antecedentes en pandemia.
+% \noindent \enlace{https://exactas.uba.ar/wp-content/uploads/2022/04/CD-22-0411-MODIFICACION-REGLAMENTO.pdf}{Res. CD 411/22} sobre antecedentes en pandemia.
 
-\seccion{Declaraciones}
+% \seccion{Declaraciones}
 
-\newpage
+% \newpage
 
-\noindent \hrulefill
-\\\\
-\noindent La presentación de este formulario implica la aceptación de las siguientes declaraciones:
-\\\\
-\noindent A) Declaro bajo juramento no encontrarme comprendido/a en las causales de inhabilitación para el desempeño de cargos públicos.
-\\\\
-\noindent B) Entiendo que la presentación de esta solicitud significa, por parte de quien se inscribe, el conocimiento de las condiciones fijadas en el Reglamento de Concursos aprobado por \enlace{https://exactas.uba.ar/wp-content/uploads/2022/12/Res.CD-28-09-Reglamento-Concursos-Docentes-Auxiliares.pdf}{Res. CD 28/09} y sus modificatorias de acuerdo a lo publicado en \enlace{https://exactas.uba.ar/institucional/concursos/}{https://exactas.uba.ar/institucional/concursos/}.
-\\\\
-\noindent C) Declaro conocer que, por \enlace{http://exactas.uba.ar/wp-content/uploads/2017/06/res.cd_716-86_incompatibilidad_de_cargo_con_beca.pdf}{Res. CD 716/86} el cargo de auxiliar docente con dedicación exclusiva o semiexclusiva es incompatible con el goce de una beca de igual dedicación.
+% \noindent \hrulefill
+% \\\\
+% \noindent La presentación de este formulario implica la aceptación de las siguientes declaraciones:
+% \\\\
+% \noindent A) Declaro bajo juramento no encontrarme comprendido/a en las causales de inhabilitación para el desempeño de cargos públicos.
+% \\\\
+% \noindent B) Entiendo que la presentación de esta solicitud significa, por parte de quien se inscribe, el conocimiento de las condiciones fijadas en el Reglamento de Concursos aprobado por \enlace{https://exactas.uba.ar/wp-content/uploads/2022/12/Res.CD-28-09-Reglamento-Concursos-Docentes-Auxiliares.pdf}{Res. CD 28/09} y sus modificatorias de acuerdo a lo publicado en \enlace{https://exactas.uba.ar/institucional/concursos/}{https://exactas.uba.ar/institucional/concursos/}.
+% \\\\
+% \noindent C) Declaro conocer que, por \enlace{http://exactas.uba.ar/wp-content/uploads/2017/06/res.cd_716-86_incompatibilidad_de_cargo_con_beca.pdf}{Res. CD 716/86} el cargo de auxiliar docente con dedicación exclusiva o semiexclusiva es incompatible con el goce de una beca de igual dedicación.
 
-\newpage
+% \newpage
 
-\noindent \titulosec{Desarrollar los Puntos Siguientes}
+\noindent \titulosec{Antecedentes}
 
 \recuadro{En todos los casos ordenar los antecedentes cronológicamente, poniendo primero los más recientes.\\Indicar con la inscripción “no corresponde” aquello que no se complete.}
 % \begin{center}
