Me faltó comitear

--- a/concursos.tex
+++ b/concursos.tex
@@ -69,7 +69,7 @@
   {\small
   \begin{tabular}{|p{0.3\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|p{0.1\textwidth}|}
       \hline
-      Elaboró/ modificó: YA&Revisó: LZ&\multicolumn{2}{|p{0.3\textwidth}|}{Aprobó: TK}\\
+      Elaboró/ modificó: MC&Revisó: LZ&\multicolumn{2}{|p{0.3\textwidth}|}{Aprobó: TK}\\
       \hline
       \multicolumn{3}{|p{0.8\textwidth}|}{Sistema de Gestión de la Calidad - sg.exactas.uba.ar/gestion/calidad}&Página \thepage\ de \pageref{LastPage}\\
       \hline
