--- a/concursos.tex
+++ b/concursos.tex
@@ -11,16 +11,15 @@
 \usepackage{ifthen}
 \usepackage[pdftex,top=5cm,left=2cm,right=1.5cm,bottom=4cm,head=110pt,foot=20pt]{geometry}
 \usepackage{fancyhdr}
-\usepackage{hyperref}
 \usepackage{enumitem}
 \usepackage{graphicx}
 \usepackage{ulem}
 \usepackage{multirow}
 \usepackage{lastpage}
 \usepackage{amssymb}
-\usepackage{hyperref}
 \usepackage{xcolor}
 \usepackage{array}
+\usepackage{hyperref}
 \input{datos_del_aspirante}
 
 \newcommand{\titulosec}[1]{\textbf{\textsf{\MakeUppercase{#1}}}}
@@ -67,7 +66,7 @@
   \begin{center}
   \textsf{
   {\small
-  \begin{tabular}{|p{0.3\textwidth}|p{0.3\textwidth}|p{0.3\textwidth}|p{0.1\textwidth}|}
+  \begin{tabular}{|p{0.29\textwidth}|p{0.29\textwidth}|p{0.29\textwidth}|p{0.13\textwidth}|}
       \hline
       Elaboró/ modificó: MC&Revisó: LZ&\multicolumn{2}{|p{0.3\textwidth}|}{Aprobó: TK}\\
       \hline
@@ -112,13 +111,13 @@
 \newcommand{\fecha}[3]{\MakeUppercase{\textbf{#1 de #2 de #3}}}
 \newcommand{\enlace}[2]{\href{#1}{\textcolor{blue}{\underline{#2}}}}
 
-\newcommand{\WorkEntry}[4]{
-        \item {#1}                                      % Jobname
-        \ifthenelse{\equal{#2}{}}{}{ \\ \textit{#2}}    % Company
-        \ifthenelse{\equal{#3}{}}{}{ \\ {#3}}           % Duration
-        \ifthenelse{\equal{#4}{}}{}{ \\ \hangindent=2em\hangafter=0
-          \small {#4} \normalsize}}                     % Description
-
+\newcommand{\WorkEntry}[4]{\nopagebreak[4]
+  \item \nopagebreak[4] {#1}                                      % Jobname
+  \nopagebreak[4] \ifthenelse{\equal{#2}{}}{}{ \\ \textit{#2}}    % Company
+  \nopagebreak[4] \ifthenelse{\equal{#3}{}}{}{ \\ {#3}}           % Duration
+  \nopagebreak[4] \ifthenelse{\equal{#4}{}}{}{ \\ \hangindent=2em\hangafter=0
+    \small {#4} \normalsize}                      % Description
+}
 \begin{document}
 
 % \recuadro{Los campos marcados con * son de llenado obligatorio}
